<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="top"
        android:layout_marginBottom="5dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_name_title"
            android:textAppearance="@style/TextViewTitles"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView android:id="@+id/tv_holder_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSecundary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="top">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number_title"
            android:textAppearance="@style/TextViewTitles"
            android:layout_marginBottom="5dp"/>

        <TextView android:id="@+id/tv_card_numer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSecundary"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="top">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date_tile"
            android:textAppearance="@style/TextViewTitles"
            android:layout_marginBottom="5dp"/>

        <TextView android:id="@+id/tv_transation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSecundary"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="top">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_title"
            android:textAppearance="@style/TextViewTitles"
            android:layout_marginBottom="5dp"/>

        <TextView android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSecundary" />
    </LinearLayout>
</LinearLayout>